--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 	\textbf{\large University of California, San Diego}
 	\begin{itemize}
 		\item B.S. in Computer Science, graduated with university latin honors \textbf{(GPA: 3.92/4)} \hfill \texttt{09/2016-06/2020}
-		\item M.S. in Computer Science \hfill \texttt{09/2020-12/2021}
+		\item M.S. in Computer Science \textbf{(GPA: 4/4)} \hfill \texttt{09/2020-12/2021}
 	\end{itemize}
 	\section{Skills}
 	\smallskip
