--- a/templates/education.tex
+++ b/templates/education.tex
@@ -1,5 +1,5 @@
 	\textbf{\large %name}
 	\begin{itemize}
 		\item %bs \textbf{(GPA: %bsgpa)} \hfill \texttt{%bsdate}
-		\item %ms \hfill \texttt{%msdate}
+		\item %ms \textbf{(GPA: %msgpa)} \hfill \texttt{%msdate}
 	\end{itemize}
